fix(modal): z-index fixes #39

--- a/packages/auction-widget/assets/app.css
+++ b/packages/auction-widget/assets/app.css
@@ -20,6 +20,7 @@
     transition-property: opacity;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 300ms;
+    z-index: 99;
   }
 
   #auction-widget-box {
@@ -103,7 +104,7 @@
 
   /* Containers */
   .auction-widget-modal {
-    z-index: 50;
+    z-index: 100;
     position: fixed;
     bottom: 2rem;
     right: 0;
@@ -112,7 +113,6 @@
   }
 
   #auction-widget-modal-content {
-    z-index: 100;
     overflow: hidden;
     padding: 1rem;
     border-radius: var(--auction-widget-border-radius);
